Text drawn via -webkit-background-clip:text should be non-blurry with all scaling techniques https://bugs.webkit.org/show_bug.cgi?id=68641

Source/WebCore:

Patch by Darin Adler <darin@apple.com> on 2011-10-14
Reviewed by Simon Fraser. Committed by Beth Dakin.

* platform/graphics/GraphicsContext.cpp:
(WebCore::GraphicsContext::createCompatibleBuffer): Allocate a buffer based on the
scale
factor of the context.
* platform/graphics/GraphicsContext.h: Added createCompatibleBuffer.

* rendering/RenderBoxModelObject.cpp:
(WebCore::RenderBoxModelObject::paintFillLayerExtended): Use
createCompatibleBuffer.

LayoutTests:

Reviewed by Simon Fraser.

* fast/css/clip-text-in-scaled-div-expected.png: Added.
* fast/css/clip-text-in-scaled-div-expected.txt: Added.
* fast/css/clip-text-in-scaled-div.html: Added.



Canonical link: https://commits.webkit.org/86210@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@97481 268f45cc-cd09-0410-ab3c-d52691b4dbfc